--- a/Group22Assignment2.tex
+++ b/Group22Assignment2.tex
@@ -221,38 +221,39 @@ The ISA instructions are inspired from Appendix A in the assignment description.
     \caption{Instruction-set architecture used in the assignment}\label{tbl:ISA}
     \begin{tabular}{lll}
         \toprule
-        \textbf{Instruction}  & \textbf{Syntax}          & \textbf{Meaning}                  \\
+        \textbf{Instruction}     & \textbf{Syntax}          & \textbf{Meaning}                  \\
         \midrule
-        \multicolumn{3}{c}{Arithmetic instructions}                                          \\
+        \multicolumn{3}{c}{Arithmetic instructions}                                             \\
         \midrule
-        Addition              & \texttt{ADD Rx, Ry, Rz;} & \texttt{Rx = Ry + Rz}             \\
-        Subtraction           & \texttt{SUB Rx, Ry, Rz;} & \texttt{Rx = Ry - Rz}             \\
-        Immediate addition    & \texttt{ADDI Rx, Ry, z;} & \texttt{Rx = Ry + z}              \\
-        Immediate subtraction & \texttt{SUBI Rx, Ry, z;} & \texttt{Rx = Ry - z}              \\
-        % Multiplication        & \texttt{MUL Rx, Ry, Rz;} & \texttt{Rx = Ry \(\cdot\) Rz}     \\
+        Addition                 & \texttt{ADD Rx, Ry, Rz;} & \texttt{Rx = Ry + Rz}             \\
+        Subtraction              & \texttt{SUB Rx, Ry, Rz;} & \texttt{Rx = Ry - Rz}             \\
+        Immediate addition       & \texttt{ADDI Rx, Ry, z;} & \texttt{Rx = Ry + z}              \\
+        Immediate subtraction    & \texttt{SUBI Rx, Ry, z;} & \texttt{Rx = Ry - z}              \\
+        Immediate multiplication & \texttt{MULI Rx, Ry, z;} & \texttt{Rx = Ry \(\cdot\) z}      \\
+        Increment                & \texttt{INC, Rx}         & \texttt{Rx = Rx + 1}              \\
         \midrule
-        \multicolumn{3}{c}{Logic instructions}                                               \\
+        \multicolumn{3}{c}{Logic instructions}                                                  \\
         \midrule
-        Bitwise OR            & \texttt{OR Rx, Ry, Rz;}  & \texttt{Rx = Ry \(\vert\) Rz}     \\
-        Bitwise AND           & \texttt{AND Rx, Ry, Rz;} & \texttt{Rx = Ry \(\&\) Rz}        \\
-        Bitwise NOT           & \texttt{NOT Rx, Ry;}     & \texttt{Rx = \(\sim\)Ry}          \\
+        Bitwise OR               & \texttt{OR Rx, Ry, Rz;}  & \texttt{Rx = Ry \(\vert\) Rz}     \\
+        Bitwise AND              & \texttt{AND Rx, Ry, Rz;} & \texttt{Rx = Ry \(\&\) Rz}        \\
+        Bitwise NOT              & \texttt{NOT Rx, Ry;}     & \texttt{Rx = \(\sim\)Ry}          \\
         \midrule
-        \multicolumn{3}{c}{Memory instructions}                                              \\
+        \multicolumn{3}{c}{Memory instructions}                                                 \\
         \midrule
-        Load immediate        & \texttt{LOADI Rx, y;}    & \texttt{Rx = y}                   \\
-        Load data             & \texttt{LOAD Rx, Ry;}    & \texttt{Rx = memory(Ry)}          \\
-        Store data            & \texttt{STORE Rx, Ry;}   & \texttt{memory(Ry) = Rx}          \\
-        Move data             & \texttt{MOV Rx, Ry;}     & \texttt{Rx = Ry}                  \\
+        Load immediate           & \texttt{LOADI Rx, y;}    & \texttt{Rx = y}                   \\
+        Load data                & \texttt{LOAD Rx, Ry;}    & \texttt{Rx = memory(Ry)}          \\
+        Store data               & \texttt{STORE Rx, Ry;}   & \texttt{memory(Ry) = Rx}          \\
+        Move data                & \texttt{MOVE Rx, Ry;}    & \texttt{Rx = Ry}                  \\
         \midrule
-        \multicolumn{3}{c}{Control and flow instructions}                                    \\
+        \multicolumn{3}{c}{Control and flow instructions}                                       \\
         \midrule
-        Jump                  & \texttt{JMP x}           & \texttt{GOTO INST x}              \\
-        Jump if equal         & \texttt{JEQ Rx, Ry, z;}  & \texttt{if(Rx == Ry) GOTO INST z} \\
-        Jump if less than     & \texttt{JLT Rx, Ry, z;}  & \texttt{if(Rx < Ry) GOTO INST z}  \\
-        Jump if greater than  & \texttt{JGT Rx, Ry, z;}  & \texttt{if(Rx > Ry) GOTO INST z}  \\
+        Jump                     & \texttt{JMP x}           & \texttt{GOTO INST x}              \\
+        Jump if equal            & \texttt{JEQ Rx, Ry, z;}  & \texttt{if(Rx == Ry) GOTO INST z} \\
+        Jump if less than        & \texttt{JLT Rx, Ry, z;}  & \texttt{if(Rx < Ry) GOTO INST z}  \\
+        Jump if greater than     & \texttt{JGT Rx, Ry, z;}  & \texttt{if(Rx > Ry) GOTO INST z}  \\
         % Jump if zero          & \texttt{JZ Rx, y;}       & \texttt{if(Rx == 0) GOTO INST y}  \\
-        Do nothing            & \texttt{NOP;}            & \texttt{No operation}             \\
-        END                   & \texttt{END;}            & \texttt{Terminate}                \\
+        Do nothing               & \texttt{NOP;}            & \texttt{No operation}             \\
+        END                      & \texttt{END;}            & \texttt{Terminate}                \\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -314,36 +315,61 @@ As seen in \cref{fig:inst} there are 4 bits allocated to opcodes. \cref{tbl:ISA}
     \end{tabular}
 \end{table}
 \subsection{Compile and encode}
-\begin{listing}[H]
+\begin{listing}[p]
     \centering
     \caption[short]{The program compiled to assembly}\label{lst:ass}
-    \begin{minted}{mips}
-LOAD R1 <- 0
-LOAD R2 <- 0
-ADD R8 = R1 + R2
-ADD R3 = R8 + 1
-ADD R4 = R8 + 20
-ADD R5 = R8 + 22
-ADD R6 = R8 + 41
-LOAD R3 R3
-LOAD R4 R4
-LOAD R5 R5
-LOAD R6 R6
-ADD R3 = R3 + R4
-ADD R3 = R3 + R5
-ADD R3 = R3 + R6
-ADD R7 = R8 + 21
-STORE R7 <- 255
-JEQ R3 === 1020 -> 19
-STORE R7 <- 000
-ADD R1 = R1 + 1
-JEQ R1 === 19 -> 22
-JUMP -> 3
-ADD R1 = 0 + 0
-ADD R2 = R2 + 20
-JEQ R2 === 380 -> 26
-JUMP -> 3
-END;
+    \begin{minted}[firstnumber = 0]{mips}
+LOADI R0, 0; // Initial values; x counter
+LOADI R1, 0; // y counter
+LOADI R2, 19; // Pixel limit
+LOADI R3, 0; // Zero value
+LOADI R4, 255; // 255 value
+JEQ R0, R2, END // For conditions; Check x, GOTO program termination
+JEQ R1, R2, INCX // Check y, GOTO incrementation of x
+JEQ R0, R3, ZEROPIXEL // Process border pixel; If x = 0
+JEQ R1, R3, ZEROPIXEL // If y = 0
+JEQ R0, R4, ZEROPIXEL // If x = 255
+JEQ R1, R4, ZEROPIXEL // If y = 255
+MULI R5, R1, 20; // y * 20
+ADD R6, R0, R5; // x + y * 200
+LOAD R8, R6; // Get input image pixel
+JEQ R8, R3, BLACK PIXEL; // Check if 0, GOTO pixel zerorising
+SUBI R9, R0, 1 // x - 1
+ADDI R10, R0, 1 // x + 1
+SUBI R11, R1, 1 // y - 1
+ADDI R12, R1, 1 // y + 1
+MULI R5, R1, 20; // y * 20
+ADD R6, R9, R5; // (x - 1) + y * 200
+
+MULI R5, R1, 20; // y * 20
+ADD R6, R10, R5; // (x + 1) + y * 200
+
+MULI R5, R11, 20; // (y - 1) * 20
+ADD R6, R0, R5; // x + (y - 1) * 200
+
+MULI R5, R12, 20; // (y + 1) * 20
+ADD R6, R0, R5; // x + (y + 1) * 200
+
+
+
+
+MULI R5, R1, 20; // y * 20
+ADD R6, R0, R5; // x + y * 200
+ADDI R7, R6, 400; // Offset to output image
+STORE R3, R7; // Set Pixel to zero
+JMP INCY; // Continue program after border process
+
+MULI R5, R1, 20; // y * 20
+ADD R6, R0, R5; // x + y * 200
+ADDI R7, R6, 400; // Offset to output image
+STORE R3, R7; // Set Pixel to zero
+JMP 11; // Continue program after border process
+
+INC R1; // Increment y
+JMP 6; // Continue nested loop
+INC R0; // Increment x
+JMP 5; // Continue main loop
+END; // Terminate program
     \end{minted}
 \end{listing}
 \begin{landscape}
